--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: WebDropDead
-    databaseName: WebDropDead
-    user: Harir99
+    # databaseName: WebDropDead
+    # user: halrubay
 
 services:
   - type: web
