--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: postgres
     databaseName: WebDropDead
-    user: halrubay
+    user: WebDropDead
 
 services:
   - type: web
