--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,6 @@ services:
         fromDatabase:
           name: WebDropDead
           property: connectionString
-      value: postgres://web_drop_dead_db_user:wQDsNbn5aNlZdziaidzmzQaGUmPGe88p@dpg-clhmilebbf9s73b25img-a/web_drop_dead_db
+      # value: postgres://web_drop_dead_db_user:wQDsNbn5aNlZdziaidzmzQaGUmPGe88p@dpg-clhmilebbf9s73b25img-a/web_drop_dead_db
       - key: RAILS_MASTER_KEY
         sync: false
