--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 databases:
   - name: postgres
-    databaseName: web_drop_dead_db
+    databaseName: webdropdead
     user: harir99
 
 services:
@@ -12,7 +12,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: web_drop_dead_db
+          name: postgres
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
