--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,15 @@
 databases:
   - name: postgres
-    ipAllowList: []
+    databaseName: webdropdead
+    user: harir99
 
 services:
   - type: web
     name: WebDropDead
     runtime: ruby
+
     buildCommand: "./render-build.sh"
-    startCommand: "bundle exec rails s"
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
