--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 databases:
-  - name: postgres
+  - name: web_drop_dead_db
     databaseName: web_drop_dead_db
     user: harir99
 
 services:
   - type: web
-    name: WebDropDead
+    name: webdropdead
     runtime: ruby
 
     buildCommand: "./render-build.sh"
@@ -13,7 +13,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: postgres
+          name: web_drop_dead_db
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
