--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,9 @@ services:
   - type: web
     name: webdropdead
     runtime: ruby
-    startCommand: "bundle exec puma -C config/puma.rb"
+
+    buildCommand: ./render-build.sh
+    startCommand: bundle exec puma -C config/puma.rb
     envVars:
       - key: DATABASE_URL
         fromDatabase:
