--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ databases:
 
 services:
   - type: web
-    name: WebDropDead
+    name: webdropdead
     runtime: ruby
 
     buildCommand: ./bin/render-build.sh
